# Robot-Arm-Control

./: .gitignore  README.md
Document/RH56DFQ系列最新资料/C/: C linux  hand.rar
Document/RH56DFQ系列最新资料/C++/: control_485.cpp
Document/RH56DFQ系列最新资料/关节与角度对应关系/: 关节角与0-1000 对应关系  .xls
Document/RH56DFQ系列最新资料/动作序列文件/: DefaultAction.txt
GUI/: BUGFIX_SUMMARY.md  main.py  rebuild.bat  requirements.txt  run_rebuild.cmd  version_info.txt
GUI/.claude/: settings.local.json
GUI/config/: action_sequences.json  actions.json  adaptive_configs.json  adaptive_grasp_params.json  settings.json
GUI/core/: action_manager.py  adaptive_grasp_controller.py  app_settings.py  arm_controller.py  data_logger.py  grasp_controller.py  sensor_data_manager.py  serial_manager.py  xarm_inspire_controller.py
GUI/core/inspire/: __init__.py
GUI/data/: grasp_data.csv  grasp_data_20250828_220102.csv  qiexiang.csv  qiexiang2.csv  sensor1_data_20250926_200445.csv  sensor1_data_20250926_201406.csv  zhengxiangli.csv  水果抓取数据.csv  水果抓取新数据 - 副本.csv  水果抓取新数据.csv
GUI/data/CHS/: 10Hz力.csv  4Hz力.csv  5Hz力.csv  最后依次递增的力.csv
GUI/gui/: main_window.py  splash_screen.py  ui_functions.py
GUI/gui/pages/: action_manager_page.py  adaptive_grasp_page.py  force_visualization_page.py  grasp_control_page.py  home_page.py  sensor_data_page.py  serial_page.py  settings_page.py  (+1 more)
GUI/inspire_control-main/: .gitignore  README.md  pyproject.toml
GUI/inspire_control-main/inspire/: __init__.py
GUI/inspire_control-main/inspire/controller/: control.py
GUI/inspire_control-main/inspire/utils/: __init__.py  convert.py
(+92 files in other folders)
